# Secretcrab

./: .gitignore  Cargo.toml  README.md  aaaa.py  yaas.py
src/: Block_cypher.rs  Feistel_network.rs  Hash.rs  lib.rs
src/Authenticity/: Diffie_Heilman.rs  Diffie_Hellman.rs  Ed25519.rs  EdDSA.rs
src/Confidentiality/: AES.rs  RSA.rs  XOR.rs
src/Hash/: SHA.rs
src/Integrity/: BLAKE.rs  Keccak.rs  Merkle_Damgard.rs  SHA.rs  Sponge.rs
src/Integrity/SHA/: SHA1.rs  SHA2.rs  SHA3.rs  tests.rs
src/Integrity/Sponge/: Keccak.rs  Photon.rs
