[package]
name = "secretcrab"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
num = { version = "0.4.1", features = ["rand"] }
ndarray = "0.15.6"
crypto-bigint = "0.5.3"
const-hex = "1.10.0"
num-traits = "0.2.17"
